<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="72dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/backdrop_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/scrim"/>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">
            <TextView
                style="@style/AppTheme.Subtitle"
                android:id="@+id/textViewReleaseDate"
                android:layout_gravity="center_horizontal" />
            <RatingBar
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarVotes"
                android:paddingBottom="@dimen/padding_bottom"
                android:progressTint="@color/colorAccent"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_bottom"
                android:weightSum="3">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="2">
                    <TextView
                        style="@style/AppTheme.Title"
                        android:id="@+id/textViewTitle" />
                    <TextView
                        style="@style/AppTheme.Text"
                        android:id="@+id/textViewOverview" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/imagePoster"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/poster_image" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_bottom">
                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/colorAccent"
                    android:id="@+id/favoriteRatingBar"
                    android:focusableInTouchMode="true"
                    android:numStars="1" />
                <TextView
                    style="@style/AppTheme.Text"
                    android:text="@string/set_as_favorite_text"
                    android:id="@+id/favoriteTextView"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/favoriteRatingBar"
                    android:layout_toEndOf="@+id/favoriteRatingBar" />
            </RelativeLayout>


            <Button
                style="@style/AppTheme.Button"
                android:text="@string/cast_button"
                android:id="@+id/castButton"
                android:layout_marginBottom="@dimen/padding_bottom" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewCast"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <Button
                style="@style/AppTheme.Button"
                android:text="@string/review_button"
                android:id="@+id/reviewButton"
                android:layout_marginBottom="@dimen/padding_bottom" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewReview"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            <Button
                style="@style/AppTheme.Button"
                android:text="@string/video_button"
                android:id="@+id/videoButton"
                android:layout_marginBottom="@dimen/padding_bottom" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewVideo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_menu_share_holo_dark"
        android:elevation="@dimen/fab_resting_elevation"
        app:borderWidth="0dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end" />


</android.support.design.widget.CoordinatorLayout>